hphp/hack/test/typecheck/first_class_polymorphism/pass_toplevel_poly_uninstantiable.php.exp
ERROR: File "pass_toplevel_poly_uninstantiable.php", line 11, characters 12-13:
Invalid argument (Typing[4323])
  File "pass_toplevel_poly_uninstantiable.php", line 3, characters 27-28:
  `T2` is a constrained type parameter
  File "pass_toplevel_poly_uninstantiable.php", line 3, characters 33-38:
  This type constraint is violated
  File "pass_toplevel_poly_uninstantiable.php", line 3, characters 33-38:
  Expected `string`
  File "pass_toplevel_poly_uninstantiable.php", line 6, characters 13-15:
  But got `int`
